force-app/main/default/objects/GPTfy_Card_Configuration__mdt/GPTfy_Card_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata stores configurations of cards that show up on different features of GPTfy example: API Data Source, Catalog, AI Model, etc.</description>
    <label>GPTfy Card Configuration</label>
    <pluralLabel>GPTfy Card Configurations</pluralLabel>
</CustomObject>