force-app/main/default/objects/GPTfy_Card_Configuration__mdt/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <label>Feature</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AMODL</fullName>
                <default>true</default>
                <label>AI Model</label>
            </value>
            <value>
                <fullName>APIDS</fullName>
                <label>API Data Source</label>
            </value>
            <value>
                <fullName>CTLOG</fullName>
                <label>Catalog</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>