force-app/main/default/objects/GPTfy_Card_Configuration__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically enabled in case record/dependent value exists.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>