force-app/main/default/objects/GPTfy_Card_Configuration__mdt/fields/Icon_Details__c.field-meta.xml
<CustomField>
    <fullName>Icon_Details__c</fullName>
    <label>Icon Details</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>