force-app/main/default/objects/GPTfy_Card_Configuration__mdt/fields/Icon_Source__c.field-meta.xml
<CustomField>
    <fullName>Icon_Source__c</fullName>
    <label>Icon Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Static Resource</fullName>
                <default>true</default>
                <label>Static Resource</label>
            </value>
            <value>
                <fullName>SLDS Icon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>