force-app/main/default/objects/GPTfy_Card_Configuration__mdt/listViews/AI_Model.listView-meta.xml
<ListView>
    <fullName>AI_Model</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Description__c</columns>
    <columns>Enabled__c</columns>
    <columns>Card_Type__c</columns>
    <columns>Icon_Details__c</columns>
    <columns>Icon_Source__c</columns>
    <columns>Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Card_Type__c</field>
        <operation>equals</operation>
        <value>AI Model,AMODL</value>
    </filters>
    <label>AI Model</label>
    <language>en_US</language>
</ListView>