force-app/main/default/objects/GPTfy_Card_Configuration__mdt/listViews/Catalog.listView-meta.xml
<ListView>
    <fullName>Catalog</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Card_Type__c</columns>
    <columns>Description__c</columns>
    <columns>Icon_Source__c</columns>
    <columns>Icon_Details__c</columns>
    <columns>Sequence__c</columns>
    <columns>Enabled__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Card_Type__c</field>
        <operation>equals</operation>
        <value>CTLOG</value>
    </filters>
    <label>Catalog</label>
</ListView>